--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Discover exceptional photography services in Austin. Offering portraits, events, creative shoots, and more. Book your professional session today.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Shots by Marcelo</title>
+    <link rel="canonical" href="https://www.shotsbymarcelo.com" />
+
+    <title>Shots by Marcelo: Creative Austin Based Photographer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
