--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Discover exceptional photography services in Austin. Offering portraits, events, creative shoots, and more. Book your professional session today.">
+      content="Discover exceptional photography services in Austin, TX and the surrounding area. Offering portraits, events, creative shoots, headshots, and more. Book today!">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
